# Scalper-Bot

./: .gitignore  main.py  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: server.py
config/: settings.yaml
core/data/: binance_rest.py  binance_ws.py
core/engine/: backtester.py  pair_manager.py  simulator.py
core/strategy/: indicators.py  risk_manager.py  signals.py
dashboard/: app.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: Badge.tsx  MetricTile.tsx  Navbar.tsx  PairGrid.tsx  PositionTable.tsx  TradeTable.tsx
frontend/src/pages/: BacktestPage.tsx
