[project]
name = "scalper-bot"
version = "0.1.0"
description = "Binance Futures scalping bot with dry-run simulation"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.40",
    "plotly>=5.24",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
scalper-bot = "main:main"
